# vocab-tester

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  f  pyproject.toml  settings.toml  settings.toml.example
.gemini/: last_task_info.txt
ref/: sqlite3-schema.txt
src/vocab_tester/: __init__.py  add_word_screen.py  ai_service.py  app.py  audio_service.py  config.py  db.py  edit_word_screen.py  main.py  models.py  quiz_screen.py  quiz_session.py  seeds.py  styles.tcss  tag_screen.py  text_utils.py  utils.py
tests/: test_add_word_screen_ai.py  test_ai_service.py  test_app.py  test_audio.py  test_clipboard.py  test_clipboard_real.py  test_config.py  test_db.py  test_db_edit.py  test_default_filter.py  test_edit_word_screen_ai.py  test_quiz_screen.py  test_quiz_session.py  test_screen_edit.py  test_utils.py
