[project]
name = "vocab-tester"
version = "0.1.0"
description = "Japanese vocab CLI"
readme = "README.md"
authors = [{ name = "Ben Allen", email = "ben05allen@hotmail.com" }]
requires-python = ">=3.14"
dependencies = ["textual>=6.11.0"]

[project.scripts]
vocab-tester = "vocab_tester.main:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--cov=vocab_tester --cov-report=term-missing"